Added JDK-specific compiles for JDK 8 and 11