@@ -10,10 +10,20 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.9</maven.compiler.source>
-		<maven.compiler.target>1.9</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 		<build.number>0</build.number>
 
+		<!--
+			You must specify JDK 8 and 11 binaries paths to build. For example, 
+			this would work from the command line:
+			mvn clean install -DJDK_8_HOME=/usr/lib/jvm/java-8-openjdk-amd64 -DJDK_8_HOME=/usr/lib/jvm/java-11-openjdk-amd64
+		-->
+		<!--
+		<JDK_8_HOME>/usr/lib/jvm/java-8-openjdk-amd64</JDK_8_HOME>
+		<JDK_11_HOME>/usr/lib/jvm/java-11-openjdk-amd64</JDK_11_HOME>
+		-->
+		
 		<!--
 			The server entry in settings.xml containing the credentials 
 			to use with when pushing maven artifacts to github
@@ -81,12 +91,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.0</version>
-				<configuration>
-					<!-- With JDK9, we have to explicitly add java.smartcardio module to module graph --> 
-					<compilerArgs>
-						<arg>--add-modules=java.smartcardio</arg>
-					</compilerArgs>
-				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -196,6 +200,9 @@
 	</build>
 
 	<modules>
+		<module>cac-agent-jdk-interface</module>
+		<module>cac-agent-jdk-8</module>
+		<module>cac-agent-jdk-11</module>
 		<module>cac-agent</module>
 		<module>cac-jgit</module>
 		<module>cac-ssl-relay</module>
